[package]
name = "magnetite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
tokio = { version = "1", features = ["full"] }
vm-memory = { version = "0.12.2", features = ["backend-atomic", "backend-mmap"] }
