[package]
name = "magnetite"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
ahash = "0.8.3"
arc-swap = "1.6.0"
atomic = "0.6.0"
atomic_float = "0.1.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
crossbeam = "0.8.2"
dynasm = "2.0.0"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
rayon = "1.7.0"
vm-memory = { version = "0.12.2", features = ["backend-atomic", "backend-mmap"] }

[features]
debug = []
