[package]
name = "magnetite"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.dev.package."*"]
opt-level = 3

[dependencies]
ahash = "0.8.3"
crossbeam = "0.8.2"
dynasm = "2.0.0"
num_cpus = "1.16.0"
parking_lot = "0.12.1"
tinyvec = "1.6.0"
vm-memory = { version = "0.12.2", features = ["backend-atomic", "backend-mmap"] }

[features]
debug = []
